--- a/Smoothing/Smoothing.csproj
+++ b/Smoothing/Smoothing.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
